# brotground

./: .gitignore  .pre-commit-config.yaml  MIT-LICENSE.txt  NOTES  README.md  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
brotground/: BrotBase.py  Brots.py  __init__.py  renderers.py  resources.py  static_renderers.py
brots/: BrotBase.py  Brots.py  __init__.py  core.py  project_types.py  resources.py
nbs/: all_brots.ipynb  julia_sets.ipynb
renderers/: __init__.py  static_renderers.py  video_renderers.py
