[tool.poetry]
name = "brotground"
version = "0.1.0"
description = "A playground for experimenting and getting mesmerized by the wonderful world of brots!"
authors = ["Adiamaan Keerthi Matheswaran <mak.adi55@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adiamaan92/brotground"
repository = "https://github.com/adiamaan92/brotground"
keywords = ["mandelbrot", "julia set", "brot"]
include = ["LICENSE"]
classifiers = [
	"Environment :: Jupyter Notebooks",
	"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numba = "^0.54.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
